// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service source calls service for LIZA 1`] = `
Array [
  Array [
    "experiments/v1",
    Object {
      "uaasRequest": Object {
        "ConfigType": "PRODUCTION",
        "UsersplitRequestParams": Object {
          "Ip": "FAKE_IP",
          "Location": "FAKE_LOCATION",
          "Restrictions": Object {
            "BrowserName": "FAKE_BROWSER",
            "DeviceType": "desktop",
            "Domain": undefined,
            "RegionAncestors": undefined,
            "RegionId": undefined,
            "RestrictionsMapping": Object {
              "Strings": Object {
                "browser_versions": "FAKE_VERSION",
              },
            },
            "Service": "mail",
          },
          "SplitIds": Object {
            "Fuid": undefined,
            "Host": undefined,
            "Icookie": "FAKE_ICOOKIE",
            "Uuid": "FAKE_UID",
            "Yuid": "FAKE_YANDEXUID",
          },
          "Timestamp": 1580554500,
        },
        "YexpCookie": undefined,
      },
    },
  ],
]
`;

exports[`service source calls service for TOUCH 1`] = `
Array [
  Array [
    "experiments/v1",
    Object {
      "uaasRequest": Object {
        "ConfigType": "PRODUCTION",
        "UsersplitRequestParams": Object {
          "Ip": "FAKE_IP",
          "Location": "FAKE_LOCATION",
          "Restrictions": Object {
            "BrowserName": "FAKE_BROWSER",
            "DeviceType": "touch",
            "Domain": undefined,
            "RegionAncestors": undefined,
            "RegionId": undefined,
            "RestrictionsMapping": Object {
              "Strings": Object {
                "browser_versions": "FAKE_VERSION",
              },
            },
            "Service": "mail_touch",
          },
          "SplitIds": Object {
            "Fuid": undefined,
            "Host": undefined,
            "Icookie": "FAKE_ICOOKIE",
            "Uuid": "FAKE_UID",
            "Yuid": "FAKE_YANDEXUID",
          },
          "Timestamp": 1580554500,
        },
        "YexpCookie": undefined,
      },
    },
  ],
]
`;

exports[`service source fuid param 1`] = `
Array [
  Array [
    "experiments/v1",
    Object {
      "uaasRequest": Object {
        "ConfigType": "PRODUCTION",
        "UsersplitRequestParams": Object {
          "Ip": "FAKE_IP",
          "Location": "FAKE_LOCATION",
          "Restrictions": Object {
            "BrowserName": "FAKE_BROWSER",
            "DeviceType": "touch",
            "Domain": undefined,
            "RegionAncestors": undefined,
            "RegionId": undefined,
            "RestrictionsMapping": Object {
              "Strings": Object {
                "browser_versions": "FAKE_VERSION",
              },
            },
            "Service": "mail_touch",
          },
          "SplitIds": Object {
            "Fuid": "FAKE_FUID",
            "Host": undefined,
            "Icookie": "FAKE_ICOOKIE",
            "Uuid": "FAKE_UID",
            "Yuid": "FAKE_YANDEXUID",
          },
          "Timestamp": 1580554500,
        },
        "YexpCookie": undefined,
      },
    },
  ],
]
`;

exports[`service source yexp cookie 1`] = `
Array [
  Array [
    "experiments/v1",
    Object {
      "uaasRequest": Object {
        "ConfigType": "PRODUCTION",
        "UsersplitRequestParams": Object {
          "Ip": "FAKE_IP",
          "Location": "FAKE_LOCATION",
          "Restrictions": Object {
            "BrowserName": "FAKE_BROWSER",
            "DeviceType": "touch",
            "Domain": undefined,
            "RegionAncestors": undefined,
            "RegionId": undefined,
            "RestrictionsMapping": Object {
              "Strings": Object {
                "browser_versions": "FAKE_VERSION",
              },
            },
            "Service": "mail_touch",
          },
          "SplitIds": Object {
            "Fuid": undefined,
            "Host": undefined,
            "Icookie": "FAKE_ICOOKIE",
            "Uuid": "FAKE_UID",
            "Yuid": "FAKE_YANDEXUID",
          },
          "Timestamp": 1580554500,
        },
        "YexpCookie": "FAKE_YEXP",
      },
    },
  ],
]
`;
